@@ -20976,43 +20976,43 @@ Print time dependent species and product profiles
 {
       Timestep/s          acetyl            Int1            Int2         lactone          ketene  totalIsomerPop totalProductPop
           1e-011        0.999999     1.3743e-006    1.59562e-010    2.89049e-011    1.67365e-012               1    3.05785e-011
-    1.25893e-011        0.999998    1.72938e-006    2.51184e-010    3.21681e-011    1.61095e-012               1    3.37791e-011
-    1.58489e-011        0.999998    2.17595e-006    3.95081e-010     3.7701e-011    1.60334e-012               1    3.93043e-011
-    1.99526e-011        0.999997    2.73745e-006    6.20583e-010    4.90837e-011    1.74576e-012               1    5.08295e-011
-    2.51189e-011        0.999997    3.44324e-006    9.73003e-010     7.0918e-011    2.08439e-012               1    7.30024e-011
-    3.16228e-011        0.999996    4.33003e-006    1.52194e-009    1.13004e-010    2.72075e-012               1    1.15725e-010
-    3.98107e-011        0.999995    5.44372e-006    2.37345e-009    1.94525e-010    3.81393e-012               1    1.98339e-010
-    5.01187e-011        0.999993    6.84152e-006    3.68781e-009    3.51826e-010    5.59735e-012               1    3.57423e-010
-    6.30957e-011        0.999991    8.59463e-006    5.70456e-009    6.51742e-010    8.39974e-012               1    6.60141e-010
-    7.94328e-011        0.999989    1.07914e-005    8.77726e-009    1.22337e-009    1.27705e-011               1    1.23614e-009
-          1e-010        0.999986     1.3541e-005    1.34197e-008    2.30354e-009    1.94957e-011               1    2.32304e-009
-    1.25893e-010        0.999983    1.69781e-005    2.03658e-008    4.32538e-009    2.97373e-011               1    4.35512e-009
-    1.58489e-010        0.999979    2.12678e-005    3.06415e-008    8.06972e-009    4.51898e-011               1    8.11491e-009
-    1.99526e-010        0.999973    2.66115e-005    4.56483e-008    1.49212e-008    6.82873e-011               1    1.49895e-008
-    2.51189e-010        0.999967    3.32536e-005    6.72476e-008    2.72882e-008     1.0246e-010               1    2.73906e-008
-    3.16228e-010        0.999958    4.14885e-005    9.78368e-008    4.92834e-008    1.52482e-010               1    4.94359e-008
-    3.98107e-010        0.999948    5.16686e-005    1.40398e-007    8.77799e-008    2.24871e-010               1    8.80047e-008
-    5.01187e-010        0.999935    6.42127e-005    1.98501e-007    1.54017e-007    3.28379e-010               1    1.54345e-007
-    6.30957e-010         0.99992    7.96151e-005    2.76252e-007    2.65947e-007    4.74531e-010               1    2.66421e-007
-    7.94328e-010        0.999901    9.84565e-005    3.78184e-007    4.51585e-007    6.78266e-010               1    4.52263e-007
-          1e-009        0.999877     0.000121416    5.09125e-007    7.53619e-007    9.58631e-010        0.999999    7.54578e-007
-    1.25893e-009        0.999849     0.000149292    6.74088e-007    1.23559e-006    1.33957e-009        0.999999    1.23692e-006
-    1.58489e-009        0.999814     0.000183024    8.78259e-007     1.9899e-006     1.8509e-009        0.999998    1.99175e-006
-    1.99526e-009        0.999772     0.000223738    1.12715e-006    3.14803e-006    2.52947e-009        0.999997    3.15056e-006
-    2.51189e-009        0.999721     0.000272809    1.42694e-006    4.89308e-006    3.42078e-009        0.999995     4.8965e-006
-    3.16228e-009        0.999659     0.000331954    1.78503e-006    7.47474e-006    4.58114e-009        0.999993    7.47932e-006
-    3.98107e-009        0.999583     0.000403365    2.21077e-006    1.12266e-005    6.08057e-009        0.999989    1.12326e-005
-    5.01187e-009        0.999491     0.000489891    2.71635e-006    1.65847e-005    8.00675e-009        0.999983    1.65928e-005
-    6.30957e-009        0.999377     0.000595257    3.31788e-006    2.41073e-005      1.047e-008        0.999976    2.41178e-005
-    7.94328e-009        0.999237     0.000724331    4.03675e-006     3.4492e-005    1.36099e-008        0.999965    3.45056e-005
-          1e-008        0.999063     0.000883432    4.90136e-006     4.8591e-005    1.76028e-008        0.999951    4.86086e-005
-    1.25893e-008        0.998846      0.00108069    5.94954e-006    6.74236e-005    2.26715e-008        0.999933    6.74462e-005
-    1.58489e-008        0.998574      0.00132645    7.23178e-006     9.2191e-005    2.90959e-008        0.999908    9.22201e-005
-    1.99526e-008        0.998233      0.00163382     8.8151e-006     0.000124308    3.72253e-008        0.999876     0.000124346
-    2.51189e-008        0.997804       0.0020193    1.07865e-005     0.000165471    4.74943e-008        0.999834     0.000165518
-    3.16228e-008        0.997265      0.00250353    1.32559e-005     0.000217768    6.04438e-008        0.999782     0.000217828
-    3.98107e-008        0.996587      0.00311236    1.63589e-005     0.000283847    7.67506e-008        0.999716     0.000283924
-    5.01187e-008        0.995734      0.00387805    2.02619e-005     0.000367097    9.72662e-008        0.999633     0.000367194
+    1.25893e-011        0.999998    1.72938e-006    2.51184e-010    3.20334e-011    1.74572e-012               1    3.37791e-011
+    1.58489e-011        0.999998    2.17595e-006    3.95081e-010    3.75021e-011    1.80225e-012               1    3.93043e-011
+    1.99526e-011        0.999997    2.73745e-006    6.20583e-010    4.88626e-011    1.96687e-012               1    5.08295e-011
+    2.51189e-011        0.999997    3.44324e-006    9.73003e-010    7.06919e-011    2.31049e-012               1    7.30024e-011
+    3.16228e-011        0.999996    4.33003e-006    1.52194e-009    1.12775e-010    2.94983e-012               1    1.15725e-010
+    3.98107e-011        0.999995    5.44372e-006    2.37345e-009     1.9429e-010     4.0491e-012               1    1.98339e-010
+    5.01187e-011        0.999993    6.84152e-006    3.68781e-009    3.51582e-010    5.84134e-012               1    3.57423e-010
+    6.30957e-011        0.999991    8.59463e-006    5.70456e-009    6.51488e-010    8.65303e-012               1    6.60141e-010
+    7.94328e-011        0.999989    1.07914e-005    8.77726e-009    1.22311e-009    1.30334e-011               1    1.23614e-009
+          1e-010        0.999986     1.3541e-005    1.34197e-008    2.30327e-009    1.97677e-011               1    2.32304e-009
+    1.25893e-010        0.999983    1.69781e-005    2.03658e-008     4.3251e-009    3.00176e-011               1    4.35512e-009
+    1.58489e-010        0.999979    2.12678e-005    3.06415e-008    8.06943e-009    4.54775e-011               1    8.11491e-009
+    1.99526e-010        0.999973    2.66115e-005    4.56483e-008    1.49209e-008    6.85816e-011               1    1.49895e-008
+    2.51189e-010        0.999967    3.32536e-005    6.72476e-008    2.72879e-008     1.0276e-010               1    2.73906e-008
+    3.16228e-010        0.999958    4.14885e-005    9.78368e-008    4.92831e-008    1.52788e-010               1    4.94359e-008
+    3.98107e-010        0.999948    5.16686e-005    1.40398e-007    8.77795e-008    2.25181e-010               1    8.80047e-008
+    5.01187e-010        0.999935    6.42127e-005    1.98501e-007    1.54017e-007    3.28694e-010               1    1.54345e-007
+    6.30957e-010         0.99992    7.96151e-005    2.76252e-007    2.65946e-007     4.7485e-010               1    2.66421e-007
+    7.94328e-010        0.999901    9.84565e-005    3.78184e-007    4.51584e-007     6.7859e-010               1    4.52263e-007
+          1e-009        0.999877     0.000121416    5.09125e-007    7.53619e-007    9.58958e-010        0.999999    7.54578e-007
+    1.25893e-009        0.999849     0.000149292    6.74088e-007    1.23558e-006     1.3399e-009        0.999999    1.23692e-006
+    1.58489e-009        0.999814     0.000183024    8.78259e-007     1.9899e-006    1.85123e-009        0.999998    1.99175e-006
+    1.99526e-009        0.999772     0.000223738    1.12715e-006    3.14803e-006    2.52981e-009        0.999997    3.15056e-006
+    2.51189e-009        0.999721     0.000272809    1.42694e-006    4.89308e-006    3.42112e-009        0.999995     4.8965e-006
+    3.16228e-009        0.999659     0.000331954    1.78503e-006    7.47474e-006    4.58148e-009        0.999993    7.47932e-006
+    3.98107e-009        0.999583     0.000403365    2.21077e-006    1.12266e-005    6.08092e-009        0.999989    1.12326e-005
+    5.01187e-009        0.999491     0.000489891    2.71635e-006    1.65847e-005     8.0071e-009        0.999983    1.65928e-005
+    6.30957e-009        0.999377     0.000595257    3.31788e-006    2.41073e-005    1.04704e-008        0.999976    2.41178e-005
+    7.94328e-009        0.999237     0.000724331    4.03675e-006     3.4492e-005    1.36102e-008        0.999965    3.45056e-005
+          1e-008        0.999063     0.000883432    4.90136e-006     4.8591e-005    1.76032e-008        0.999951    4.86086e-005
+    1.25893e-008        0.998846      0.00108069    5.94954e-006    6.74236e-005    2.26719e-008        0.999933    6.74462e-005
+    1.58489e-008        0.998574      0.00132645    7.23178e-006     9.2191e-005    2.90963e-008        0.999908    9.22201e-005
+    1.99526e-008        0.998233      0.00163382     8.8151e-006     0.000124308    3.72257e-008        0.999876     0.000124346
+    2.51189e-008        0.997804       0.0020193    1.07865e-005     0.000165471    4.74947e-008        0.999834     0.000165518
+    3.16228e-008        0.997265      0.00250353    1.32559e-005     0.000217768    6.04442e-008        0.999782     0.000217828
+    3.98107e-008        0.996587      0.00311236    1.63589e-005     0.000283847    7.67509e-008        0.999716     0.000283924
+    5.01187e-008        0.995734      0.00387805    2.02619e-005     0.000367097    9.72666e-008        0.999633     0.000367194
     6.30957e-008        0.994662      0.00484101    2.51711e-005     0.000471842    1.23065e-007        0.999528     0.000471965
     7.94328e-008        0.993313      0.00605182    3.13441e-005     0.000603559    1.55497e-007        0.999396     0.000603714
           1e-007        0.991618      0.00757381    3.91036e-005     0.000769127    1.96258e-007        0.999231     0.000769324
@@ -21021,7 +21021,7 @@ Print time dependent species and product profiles
     1.99526e-007        0.983455       0.0149022    7.64657e-005      0.00156635    3.92493e-007        0.998433      0.00156674
     2.51189e-007        0.979244       0.0186824    9.57384e-005      0.00197758    4.93712e-007        0.998022      0.00197807
     3.16228e-007        0.973968       0.0234184     0.000119884      0.00249279    6.20521e-007        0.997507      0.00249341
-    3.98107e-007        0.967367       0.0293444     0.000150096      0.00313745    7.79192e-007        0.996862      0.00313823
+    3.98107e-007        0.967367       0.0293444     0.000150096      0.00313745    7.79193e-007        0.996862      0.00313823
     5.01187e-007        0.959121       0.0367478     0.000187841      0.00394282    9.77418e-007        0.996056       0.0039438
     6.30957e-007        0.948839       0.0459784     0.000234901      0.00494697    1.22457e-006        0.995052       0.0049482
     7.94328e-007        0.936051       0.0574584      0.00029343      0.00619583    1.53195e-006        0.993803      0.00619736
@@ -21116,7 +21116,7 @@ Print time dependent species and product profiles
          630.957    1.62765e-014        0.898326      0.00238332       0.0992668    2.38515e-005        0.900709       0.0992907
          794.328    1.62701e-014        0.898376       0.0020897       0.0995107    2.38129e-005        0.900465       0.0995345
             1000    1.62638e-014        0.898408      0.00181244       0.0997556    2.37658e-005        0.900221       0.0997794
-         1258.93    1.62578e-014        0.898414      0.00156927       0.0999926    2.37077e-005        0.899984        0.100016
+         1258.93    1.62578e-014        0.898414      0.00156927       0.0999926    2.37078e-005        0.899984        0.100016
          1584.89    1.62524e-014        0.898386      0.00137488        0.100216    2.36351e-005        0.899761        0.100239
          1995.26    1.62477e-014        0.898315      0.00123654        0.100425    2.35434e-005        0.899551        0.100449
          2511.89    1.62435e-014        0.898196      0.00115137        0.100629    2.34274e-005        0.899348        0.100652
