@@ -58,7 +58,7 @@ Diagonlize Collision Operator -- Time elapsed: 0 seconds.
 Finish Calculation -- Time elapsed: 51 seconds.
 In total, 1 temperature/concentration-pressure points calculated.
  *Info in main
- -- Total time elapsed: 85 seconds.
+ -- Total time elapsed: 87 seconds.
 
 System saved
 m_Mass is provided but not used in OCHCH2
